logs/validate.20260407-114638.log
error[E0599]: no method named `length` found for struct `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<T>` in the current scope
    --> src/Chap43/OrderedTableStEph.rs:1043:27
     |
1043 |             let len = seq.length();
     |                           ^^^^^^
     |
    ::: src/Chap19/ArraySeqStEph.rs:71:5
     |
  71 |     pub struct ArraySeqStEphS<T> {
     |     ---------------------------- method `length` not found for this struct
...
 185 |         fn length(&self) -> (len: usize)
     |            ------ the method is available for `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<K>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `nth` with a similar name, but with different arguments
    --> src/Chap19/ArraySeqStEph.rs:192:9
     |
 192 | /         fn nth(&self, index: usize) -> (nth_elem: &T)
 193 | |             requires index < self.spec_len()
 194 | |             ensures *nth_elem == self.spec_index(index as int);
     | |_______________________________________________________________^
help: trait `ArraySeqStEphTrait` which provides `length` is implemented but not in scope; perhaps you want to import it
     |
  28 +     use crate::Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphTrait;
     |

error[E0599]: no method named `nth` found for struct `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<T>` in the current scope
    --> src/Chap43/OrderedTableStEph.rs:1092:29
     |
1092 |                 let k = seq.nth(i);
     |                             ^^^
     |
    ::: src/Chap19/ArraySeqStEph.rs:71:5
     |
  71 |     pub struct ArraySeqStEphS<T> {
     |     ---------------------------- method `nth` not found for this struct
...
 192 |         fn nth(&self, index: usize) -> (nth_elem: &T)
     |            --- the method is available for `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<K>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `length` with a similar name, but with different arguments
    --> src/Chap19/ArraySeqStEph.rs:185:9
     |
 185 | /         fn length(&self) -> (len: usize)
 186 | |             ensures len as int == self.spec_len();
     | |__________________________________________________^
help: trait `ArraySeqStEphTrait` which provides `nth` is implemented but not in scope; perhaps you want to import it
     |
  28 +     use crate::Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphTrait;
     |

error[E0599]: no method named `length` found for struct `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<T>` in the current scope
    --> src/Chap43/OrderedTableStPer.rs:1197:27
     |
1197 |             let len = seq.length();
     |                           ^^^^^^
     |
    ::: src/Chap19/ArraySeqStEph.rs:71:5
     |
  71 |     pub struct ArraySeqStEphS<T> {
     |     ---------------------------- method `length` not found for this struct
...
 185 |         fn length(&self) -> (len: usize)
     |            ------ the method is available for `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<K>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `nth` with a similar name, but with different arguments
    --> src/Chap19/ArraySeqStEph.rs:192:9
     |
 192 | /         fn nth(&self, index: usize) -> (nth_elem: &T)
 193 | |             requires index < self.spec_len()
 194 | |             ensures *nth_elem == self.spec_index(index as int);
     | |_______________________________________________________________^
help: trait `ArraySeqStEphTrait` which provides `length` is implemented but not in scope; perhaps you want to import it
     |
  28 +     use crate::Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphTrait;
     |

error[E0599]: no method named `nth` found for struct `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<T>` in the current scope
    --> src/Chap43/OrderedTableStPer.rs:1239:29
     |
1239 |                 let k = seq.nth(i);
     |                             ^^^
     |
    ::: src/Chap19/ArraySeqStEph.rs:71:5
     |
  71 |     pub struct ArraySeqStEphS<T> {
     |     ---------------------------- method `nth` not found for this struct
...
 192 |         fn nth(&self, index: usize) -> (nth_elem: &T)
     |            --- the method is available for `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<K>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `length` with a similar name, but with different arguments
    --> src/Chap19/ArraySeqStEph.rs:185:9
     |
 185 | /         fn length(&self) -> (len: usize)
 186 | |             ensures len as int == self.spec_len();
     | |__________________________________________________^
help: trait `ArraySeqStEphTrait` which provides `nth` is implemented but not in scope; perhaps you want to import it
     |
  28 +     use crate::Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphTrait;
     |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
Elapsed: 15s
Sampled Memory Usage: peak rust_verify RSS: 647MB, peak z3 RSS: 0MB, min free: 17377MB
Sampled CPU Usage: rust_verify: 12s, z3 children: 0s
